--- a/Pixel Art World/src/main/AndroidManifest.xml
+++ b/Pixel Art World/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="kapp.pixelartworld"
-    android:versionCode="11"
-    android:versionName="1.4.2" >
+    android:versionCode="12"
+    android:versionName="1.4.3" >
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -21,7 +21,8 @@
         android:label="@string/app_name"
         android:theme="@style/Theme.Holo.Light.NoActionBar"
         android:name="android.support.multidex.MultiDexApplication"
-        android:largeHeap="true">
+        android:largeHeap="true"
+        >
         <meta-data android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
