--- a/build.gradle
+++ b/build.gradle
@@ -4,13 +4,13 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'com.android.tools.build:gradle:2.3.0'
         classpath 'com.google.gms:google-services:3.0.0'
     }
 }
 
 allprojects {
-    buildDir = "C:/Users/vscheidecker/${rootProject.name}/${project.name}/build"
+    buildDir = "${rootProject.name}/${project.name}/build"
     repositories {
         jcenter()
     }
